# qualia-codegen-plugin-snn

./: .gitlab-ci.yml  pyproject.toml
docs/: conf.py  index.rst
src/qualia_codegen_plugin_snn/: Converter.py
src/qualia_codegen_plugin_snn/assets/: model.cc
src/qualia_codegen_plugin_snn/assets/include/layers/: if.hh  lif.hh
src/qualia_codegen_plugin_snn/assets/layers/: if.cc  lif.cc
src/qualia_codegen_plugin_snn/examples/Linux/: SpikingNeuralNetwork.h
src/qualia_codegen_plugin_snn/examples/NucleoL452REP/: CMakeLists.txt
src/qualia_codegen_plugin_snn/examples/NucleoL452REP/Core/Inc/: SpikingNeuralNetwork.h
src/qualia_codegen_plugin_snn/graph/: TorchModelGraph.py
src/qualia_codegen_plugin_snn/graph/layers/: TIfLayer.py  TLifLayer.py  TObjectDetectionPostProcessLayer.py
